--- a/newsgrid_project/css/style.css
+++ b/newsgrid_project/css/style.css
@@ -48,6 +48,10 @@ h6 {
   line-height: 1.3;
 }
 
+p {
+  margin: 0.5rem 0;
+}
+
 /* Utility */
 .container {
   max-width: var(--max-width);
@@ -157,6 +161,16 @@ h6 {
 }
 .p-3 {
   padding: 3rem;
+}
+
+.list li {
+  padding: 0.5rem 0;
+  border-bottom: #555 dotted 1px;
+  width: 90%;
+}
+
+.list li a:hover {
+  color: var(--primary-color) !important;
 }
 
 /* Nav */
@@ -306,4 +320,8 @@ to the nearest relative container */
   width: 90%;
   padding: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+#main-footer .footer-container input[type="submit"] {
+  width: 90%;
 }
